# java/inflector-dropwizard/src/main/java/io/swagger/samples/inflector/dropwizard/controllers/SampleController.java
@@ -45,4 +45,12 @@ public class SampleController {
 
         return null;
     }
+
+    public ResponseContext formDataTest(RequestContext request, String description, java.io.InputStream file) {
+
+        return new ResponseContext()
+                .status(Status.OK)
+                .entity("OK");
+    }
+
 }
